# pihole5-list-tool

./: .gitignore  .pylintrc  LICENSE  Makefile  README.md  allowlists.py  banner.py  blocklists.py  constants.py  inquirer.py  ph5lt.py  pihole5-list-tool.py  prompts.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  stats.py  utils.py
.github/ISSUE_TEMPLATE/: bug_report.md
cast/: original.cast  short.cast
data/: docker_inspect_pihole.json
ph5lt/: __main__.py  allowlists.py  app.py  banner.py  blocklists.py  constants.py  prompts.py  stats.py  utils.py
src/: constants.py  inquirer.py  ph5lt.py  utils.py
tests/: test_inqiurer.py  test_prompts.py  test_utils.py
