[tool.poetry]
name = "pihole5-list-tool"
version = "0.6.4"
description = "A tool for quickly and easily bulk adding allowlists and ad/blocklists to a Pi-hole 5 installation"
authors = ["jesse <jessedp@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/jessedp/pihole5-list-tool"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
    "Topic :: Internet :: Name Service (DNS)",
]
keywords = [
    "pihole",
    "pi-hole",
    "blacklist",
    "blocklist",
    "whitelist",
    "allowlist",
    "adlist",
]
packages = [{ include = "ph5lt" }]


[tool.poetry.scripts]
pihole5-list-tool = 'ph5lt.app:main'

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/jessedp/pihole5-list-tool/issues"
"Source Code" = "https://github.com/jessedp/pihole5-list-tool"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"
inquirerpy = "^0.3.4"
ansicolors = "^1.1.8"
terminaltables = "^3.1.10"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
pylint = "^3.0.2"
coverage = "^7.3.2"
pytest = "^7.4.3"
pytest-subprocess = "^1.5.0"


[[tool.poetry.source]]
name = "testpypi"
url = "https://test.pypi.org/legacy/"
priority = "primary"


[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.black]
target-version = ["py37"]

[tool.semantic_release]
version_variable = ["ph5lt/banner.py:__version__", "pyproject.toml:version"]

build_command = "pip install poetry && poetry build"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
